Half of page with 1 youtube video just to see if it all works

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
                 <a href="/" class="navMob-link">Home</a>
                 <a href="/server" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
-                <a href="#" class="navMob-link">Join Now</a>
+                <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
 
@@ -51,7 +51,7 @@
                     <a href="/" class="navBar-link navActive">Home</a>
                     <a href="/server" class="navBar-link">Server Status</a>
                     <a href="/leaderboards" class="navBar-link">Leaderboards</a>
-                    <a href="#" class="navBar-btn">Join Now</a>
+                    <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
                 </div>
@@ -70,13 +70,14 @@
         <div class="HomeContainer">
 
             <div class="homeHeader">
-                <p class="homeTitle">Lore And Storyline</p>
+                <p class="homeTitle">Welcome to Tarkraft!</p>
                 <p class="homeSlogan">
-                    In Valorant lore, Jett is an agile agent expert in the art of evasion.
-                    She overwhelms enemies and wounds them with a.
+                    Escape on Tarkraft is a Mincraft modpack/server set inside a hardcore military shooter with built in rpg and mmo features. 
+                    Battle through various raids to loot, kill, and steal anything you find to bring back to your base. 
+                    But BEWARE on risk whatever you are willing to lose.
                 </p>
 
-                <a href="#" class="headingBtn">Check Leaderboards</a>
+                <a href="https://www.curseforge.com/minecraft/modpacks/escape-from-minecraft" class="headingBtn">Get the Modpack</a>
             </div>
 
 
@@ -90,13 +91,13 @@
 
             <div class="topHeading">
 
-                <p class="bigHeading">BOOK YOUR EVENT</p>
+                <p class="bigHeading">Videos!</p>
     
                 <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
                 </svg>
     
-                <p class="smallHeading">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursur a sit amet mauris.</p>
+                <p class="smallHeading">Here we have some great videos of gameplay as well as some awesome recreation trailers as-well! We hope you enjoy them.</p>
     
             </div>
 
@@ -104,7 +105,7 @@
 
                 <div class="newsInfo">
 
-                    <img src="https://thebatmanuniverse.net/wp-content/uploads/2019/02/esport-tournament.png" class="newsInfo-img">
+                    <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/lXGakm_etN8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="newsDetails">
 
@@ -117,12 +118,12 @@
                                     </svg>
                                 </div>
 
-                                <div><p>June 4, 2021</p></div>
+                                <div><p>Beta Trailer</p></div>
                             </div>
 
-                            <p class="newsName">Winners on ESL PRO</p>
+                           <!-- <p class="newsName">Winners on ESL PRO</p>
                             <p class="smallNews">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum</p>
-                        
+                           -->
                         </div>
 
                     </div>
