--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -110,20 +110,8 @@
                     <div class="newsDetails">
 
                         <div class="newsSpacing">
-
-                            <div class="newsSpaceBetween">
-                                <div>
-                                    <svg class="newsCalendar" viewBox="0 0 24 24">
-                                        <path fill="currentColor" d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" />
-                                    </svg>
-                                </div>
-
-                                <div><p>Beta Trailer</p></div>
-                            </div>
-
-                           <!-- <p class="newsName">Winners on ESL PRO</p>
-                            <p class="smallNews">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum</p>
-                           -->
+                            <p class="newsName">Open Beta Trailer</p>
+                            <p class="smallNews">Our Official Tarkraft Server will go live on February 26th so don't miss it!</p>
                         </div>
 
                     </div>
