Updated all the video slots.

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -105,66 +105,45 @@
 
                 <div class="newsInfo">
 
+                    <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/TrD58tqs3fU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="newsDetails">
+
+                        <div class="newsSpacing">
+                            <p class="newsName">Early Alpha Gameplay</p>
+                            <p class="smallNews">Here we have some really early alpha gameplay with us showing off the gun mod and scavs!</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="newsInfo">
+
+                    <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/L-RGOQ-l1LY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="newsDetails">
+
+                        <div class="newsSpacing">
+
+                            <p class="newsName">Official Server Trailer</p>
+                            <p class="smallNews">Here is one of our trailers for our Official Escape from Tarkraft Server!</p>
+                        
+                        </div>
+                        
+                    </div>
+
+                </div>
+
+                <div class="newsInfo">
+
                     <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/lXGakm_etN8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="newsDetails">
 
                         <div class="newsSpacing">
-                            <p class="newsName">Open Beta Trailer</p>
+
+                            <p class="newsName">Open Beta Announcement Trailer</p>
                             <p class="smallNews">Our Official Tarkraft Server will go live on February 26th so don't miss it!</p>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div class="newsInfo">
-
-                    <img src="https://thebatmanuniverse.net/wp-content/uploads/2019/02/esport-tournament.png" class="newsInfo-img">
-
-                    <div class="newsDetails">
-
-                        <div class="newsSpacing">
-
-                            <div class="newsSpaceBetween">
-                                <div>
-                                    <svg class="newsCalendar" viewBox="0 0 24 24">
-                                        <path fill="currentColor" d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" />
-                                    </svg>
-                                </div>
-
-                                <div><p>June 4, 2021</p></div>
-                            </div>
-
-                            <p class="newsName">Winners on ESL PRO</p>
-                            <p class="smallNews">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum</p>
-                        
-                        </div>
-                        
-                    </div>
-
-                </div>
-
-                <div class="newsInfo">
-
-                    <img src="https://thebatmanuniverse.net/wp-content/uploads/2019/02/esport-tournament.png" class="newsInfo-img">
-
-                    <div class="newsDetails">
-
-                        <div class="newsSpacing">
-
-                            <div class="newsSpaceBetween">
-                                <div>
-                                    <svg class="newsCalendar" viewBox="0 0 24 24">
-                                        <path fill="currentColor" d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z" />
-                                    </svg>
-                                </div>
-
-                                <div><p>June 4, 2021</p></div>
-                            </div>
-
-                            <p class="newsName">Winners on ESL PRO</p>
-                            <p class="smallNews">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum</p>
                         
                         </div>
                         
