Lots of changes all pages should be done if I did it correctly :)

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -162,15 +162,15 @@
 
             <div class="topHeading">
 
-                <p class="bigHeading">BOOK YOUR EVENT</p>
+                <p class="bigHeading">Looking to keep up with the latest Tarkraft news?</p>
     
                 <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
                 </svg>
     
-                <p class="smallHeading">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursur a sit amet mauris.</p>
+                <p class="smallHeading">We provide things like map updates and developer updates on our Official Discord server. If you do not have Discord feel free to join our forums and we post all news there as well.</p>
                     
-                <a href="#" class="headingBtn">Book a event now</a>
+                <a href="https://discord.gg/TspMTqt" class="headingBtn">Join our Discord</a>
     
             </div>
 
@@ -181,10 +181,10 @@
 
         <div class="JCFooter">
             <img src="/assets/images/LogoGray.png" class="footerLogo">
-            <p class="footerTitle">Get in Touch with Us</p>
-            <p class="footerDesc">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum</p>
+            <p class="footerTitle">Looking to get in touch?</p>
+            <p class="footerDesc">Contact us via the forums or for a more direct communication feel free to join our discord!</p>
 
-            <p class="footerCopyright">Escape from Tarkraft &copy; 2021. All Rights Reserved</p>
+            <p class="footerCopyright">JA Enterprises LLC &copy; 2021. All Rights Reserved</p>
             <a href="https://joshuacote.net" class="joshuacote">Made by <img src="https://joshuacote.net/copyright/cote.png"></a>
         </div>
         <!-- FOOTER -->
