--- a/views/pages/leaderboards.ejs
+++ b/views/pages/leaderboards.ejs
@@ -31,7 +31,7 @@
                 <a href="/" class="navMob-link">Home</a>
                 <a href="/server" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
-                <a href="#" class="navMob-link">Join Now</a>
+                <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
 
@@ -49,7 +49,7 @@
                     <a href="/" class="navBar-link">Home</a>
                     <a href="/server" class="navBar-link">Server Status</a>
                     <a href="/leaderboards" class="navBar-link navActive">Leaderboards</a>
-                    <a href="#" class="navBar-btn">Join Now</a>
+                    <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
                 </div>
@@ -73,7 +73,7 @@
                 <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
             </svg>
 
-            <p class="smallHeading">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursur a sit amet mauris.</p>
+            <p class="smallHeading">Here is our current top 10 Players of the Official Server! </p>
                 
 
         </div>
@@ -135,15 +135,15 @@
 
             <div class="topHeading">
 
-                <p class="bigHeading">BOOK YOUR EVENT</p>
+                <p class="bigHeading">Come join the fight!</p>
     
                 <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
                 </svg>
     
-                <p class="smallHeading">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursur a sit amet mauris.</p>
+                <p class="smallHeading">Are you ready to pour your blood, sweat, and tears into something great again? Well then you found the right place because Tarkraft is an Actively developed community with constant updates so you will never be bored!</p>
                     
-                <a href="#" class="headingBtn">Book a event now</a>
+                <a href="https://www.curseforge.com/minecraft/modpacks/escape-from-minecraft" class="headingBtn">Join us now!</a>
     
             </div>
 
@@ -157,10 +157,10 @@
 
         <div class="JCFooter">
             <img src="/assets/images/LogoGray.png" class="footerLogo">
-            <p class="footerTitle">Get in Touch with Us</p>
-            <p class="footerDesc">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum</p>
+            <p class="footerTitle">Looking to get in touch?</p>
+            <p class="footerDesc">Contact us via the forums or for a more direct communication feel free to join our discord!</p>
 
-            <p class="footerCopyright">Escape from Tarkraft &copy; 2021. All Rights Reserved</p>
+            <p class="footerCopyright">JA Enterprises LLC &copy; 2021. All Rights Reserved</p>
             <a href="https://joshuacote.net" class="joshuacote">Made by <img src="https://joshuacote.net/copyright/cote.png"></a>
         </div>
         <!-- FOOTER -->
