--- a/views/pages/server.ejs
+++ b/views/pages/server.ejs
@@ -31,7 +31,7 @@
                 <a href="/" class="navMob-link">Home</a>
                 <a href="/server" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
-                <a href="#" class="navMob-link">Join Now</a>
+                <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
 
@@ -49,7 +49,7 @@
                     <a href="/" class="navBar-link">Home</a>
                     <a href="/server" class="navBar-link navActive">Server Status</a>
                     <a href="/leaderboards" class="navBar-link">Leaderboards</a>
-                    <a href="#" class="navBar-btn">Join Now</a>
+                    <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
                 </div>
@@ -96,7 +96,7 @@
     
                             <p class="smModPack"><%- query.software %> | Minecraft <%- query.version %></p>
     
-                            <p class="smModDesc">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum</p>
+                            <p class="smModDesc">All our servers are provided on a Premium 10Gbps connection on Enterprise grade Cloud Technology provided by https://fastcat.co/ Check them out if your interested in starting your own server!</p>
     
                             <div class="flexEndLow">
                                 <div>play.tarkraft.com</div>
