--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -31,7 +31,7 @@
                 <a href="/" class="navMob-link">Home</a>
                 <a href="/server" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
-                <a href="#" class="navMob-link">Join Now</a>
+                <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
 
@@ -49,7 +49,7 @@
                     <a href="/" class="navBar-link">Home</a>
                     <a href="/server" class="navBar-link">Server Status</a>
                     <a href="/leaderboards" class="navBar-link navActive">Leaderboards</a>
-                    <a href="#" class="navBar-btn">Join Now</a>
+                    <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
                 </div>
@@ -67,13 +67,13 @@
 
         <div class="topHeading">
 
-            <p class="bigHeading">Top 10 Player Profile</p>
+            <p class="bigHeading"><%= player.name %> Profile Page</p>
 
             <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
             </svg>
 
-            <p class="smallHeading">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursur a sit amet mauris.</p>
+            <p class="smallHeading">These are the current stats for player <%= player.name %>. Please note the stats may have a slight delay before the stats update after a match.</p>
                 
 
         </div>
@@ -113,7 +113,7 @@
         
                             <div class="profileInfo">
                                 <p class="profType">Playtime</p>
-                                <p class="profNumb"><%= player.playTime %></p>
+                                <p class="profNumb"><%= player.playTime %> Mins</p>
                             </div>
         
                             <div class="profileInfo">
