Fixing servers message

--- a/views/pages/server.ejs
+++ b/views/pages/server.ejs
@@ -96,7 +96,7 @@
     
                             <p class="smModPack"><%- query.software %> | Minecraft <%- query.version %></p>
     
-                            <p class="smModDesc">All our servers are provided on a Premium 10Gbps connection on Enterprise grade Cloud Technology provided by https://fastcat.co/ Check them out if your interested in starting your own server!</p>
+                            <p class="smModDesc">All our servers are provided on a Premium 10Gbps connection on Enterprise grade Cloud Technology provided by <a href=https://fastcat.co/">FastCat Gaming Servers!</a> Check them out if your interested in starting your own server!</p>
     
                             <div class="flexEndLow">
                                 <div>play.tarkraft.com</div>
