--- a/views/pages/server.ejs
+++ b/views/pages/server.ejs
@@ -94,7 +94,7 @@
                                 <div class="onlineTag">Online</div>
                             </div>
     
-                            <p class="smModPack"><%- query.software %> | Minecraft <%- query.version %></p>
+                            <p class="smModPack"><!-- <%- query.software %> -->Tarkraft V1.1 | Minecraft <%- query.version %></p>
     
                             <p class="smModDesc">All our servers are provided on a Premium 10Gbps connection on Enterprise grade Cloud Technology provided by <a href="https://fastcat.co">FastCat!</a> Check them out if your interested in starting your own server!</p>
     
