First try making the background a youtube video

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -142,7 +142,8 @@ a {
 /* HOME PAGE */
 
 .homeContainer-NavBar {
-    background: url(/assets/images/header-bg.png);
+    /*background: url(/assets/images/header-bg.png);*/
+    /*background: url(https://www.youtube-nocookie.com/embed/lXGakm_etN8);*/
     background-size: cover;
     background-position: top;
     min-height: 100vh;
