--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,6 +20,11 @@
     </head>
 
     <body>
+        <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
+            <iframe frameborder="0" height="100%" width="100%" 
+              src="https://www.youtube-nocookie.com/embed/lXGakm_etN8?autoplay=1&controls=0&showinfo=0&autohide=1">
+            </iframe>
+       </div>
 
         <!-- NAVBAR -->
 
@@ -74,7 +79,7 @@
                 <p class="homeSlogan">
                     Escape on Tarkraft is a Mincraft modpack/server set inside a hardcore military shooter with built in rpg and mmo features. 
                     Battle through various raids to loot, kill, and steal anything you find to bring back to your base. 
-                    But BEWARE on risk whatever you are willing to lose.
+                    But BEWARE, only risk whatever you are willing to lose.
                 </p>
 
                 <a href="https://www.curseforge.com/minecraft/modpacks/escape-from-minecraft" class="headingBtn">Get the Modpack</a>
