Added video background

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -142,7 +142,7 @@ a {
 /* HOME PAGE */
 
 .homeContainer-NavBar {
-    /*background: url(/assets/images/header-bg.png);*/
+    background: url(/assets/images/trailer1.mp4);
     /*background: url(https://www.youtube-nocookie.com/embed/lXGakm_etN8);*/
     background-size: cover;
     background-position: top;
