Fixing Background video

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -141,8 +141,17 @@ a {
 
 /* HOME PAGE */
 
+.video {
+    object-fit: cover;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+  
 .homeContainer-NavBar {
-    background: url(/assets/images/trailer1.mp4);
+    /* background: url(/assets/images/trailer1.mp4); */
     /*background: url(https://www.youtube-nocookie.com/embed/lXGakm_etN8);*/
     background-size: cover;
     background-position: top;
