--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,6 +20,10 @@
     </head>
 
     <body>
+        <video playsinline autoplay muted loop poster="/public/assets/images/header-bg.png" id="bgvid">
+            <source src="/public/assets/images/trailer1.mp4" type="video/mp4">
+        </video>
+
 
         <!-- NAVBAR -->
 
