--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,7 +20,8 @@
     </head>
 
     <body>
-        <video playsinline autoplay muted loop poster="/public/assets/images/header-bg.png" id="bgvid">
+
+        <video id="videoBG" poster="/public/assets/images/header-bg.png" autoplay muted loop>
             <source src="/public/assets/images/trailer1.mp4" type="video/mp4">
         </video>
 
