--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,9 +20,10 @@
     </head>
 
     <body>
-
-        <video id="videoBG" poster="/public/assets/images/header-bg.png" autoplay muted loop>
-            <source src="/public/assets/images/trailer1.mp4" type="video/mp4">
+        <video controls width="100%">
+            <source src="http://localhost:3000/video" type="video/mp4">
+        
+            Sorry, your browser doesn't support embedded videos.
         </video>
 
 
