Hoping this solves it

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,12 +20,9 @@
     </head>
 
     <body>
-        <video controls width="100%">
-            <source src="http://localhost:3000/video" type="video/mp4">
-        
-            Sorry, your browser doesn't support embedded videos.
+        <video autoplay muted loop id="myVideo">
+            <source src="/public/assets/trailer1.mp4" type="video/mp4">
         </video>
-
 
         <!-- NAVBAR -->
 
