--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -141,14 +141,13 @@ a {
 
 /* HOME PAGE */
 
-#videoBG {
-   position:fixed;
-    z-index: -1;
-
-/*not work if the screen ratio is below 16/9*/
-    width:100%;     
-    height: auto;
-}
+#myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+  }
 
 .homeContainer-NavBar {
     background: url(/public/assets/images/header-bg.png);
