--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -39,7 +39,7 @@
 
 <div class="homeContainer-NavBar">
     <video autoplay muted loop id="myVideo">
-        <source src="/public/assets/trailer1.mp4" type="video/mp4">
+        <source src="public/assets/trailer1.mp4" type="video/mp4">
     </video>
 
         <div class="navBar-bg">
