--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,6 +21,10 @@
 
     <body>
 
+        <video autoplay muted loop id="myVideo">
+            <source href="/assets/trailer1.mp4" type="video/mp4">
+        </video>
+
         <!-- NAVBAR -->
 
         <!-- NAVBAR MOBILE -->
@@ -37,10 +41,7 @@
 
         <!-- NAVBAR MOBILE END -->
 
-<div class="homeContainer-NavBar">
-    <video autoplay muted loop id="myVideo">
-        <source src="public/assets/trailer1.mp4" type="video/mp4">
-    </video>
+    <div class="homeContainer-NavBar">
 
         <div class="navBar-bg">
 
