--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,11 +20,10 @@
     </head>
 
     <body>
-
         <video autoplay muted loop id="myVideo">
-            <source href="/assets/trailer1.mp4" type="video/mp4">
+            <source src="https://d110uqcxtnt6ja.cloudfront.net/trailer1.mp4" type="video/mp4">
         </video>
-
+          
         <!-- NAVBAR -->
 
         <!-- NAVBAR MOBILE -->
