--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,12 +17,10 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
         
         <link rel="stylesheet" href="/assets/css/style.css">
+        <link href="dist/vidbg.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
-        <video autoplay muted loop id="myVideo">
-            <source src="https://d110uqcxtnt6ja.cloudfront.net/trailer1.mp4" type="video/mp4">
-        </video>
           
         <!-- NAVBAR -->
 
@@ -204,6 +202,7 @@
               document.getElementById("mobileID").style.width = "0%";
             }
         </script>
+        <script src="dist/vidbg.js"></script>
     </body>
 
 
