--- a/views/pages/server.ejs
+++ b/views/pages/server.ejs
@@ -124,7 +124,7 @@
 
                             <div class="serverRow">
                                 <% for (let player of query.players) { %>
-                                <a href="#"><img src="https://minotar.net/avatar/<%= player %>/50" class="serverRow-image"></a>
+                                <a href="/profile/<%= player %>"><img src="https://minotar.net/avatar/<%= player %>/50" class="serverRow-image"></a>
                                 <% } %>
                             </div>
                         </div>
