Front page background video

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -20,7 +20,12 @@
     </head>
 
     <body>
-          
+
+
+        <video id="myVideo" muted autoplay loop playsinline>
+            <source src="/assets/videos/tanks.mp4" type="video/mp4">
+        </video>
+
         <!-- NAVBAR -->
 
         <!-- NAVBAR MOBILE -->
@@ -37,28 +42,28 @@
 
         <!-- NAVBAR MOBILE END -->
 
-    <div class="homeContainer-NavBar">
+        <div class="homeContainer-NavBar">
 
-        <div class="navBar-bg">
+            <div class="navBar-bg">
 
-            <div class="navBar-width">
+                <div class="navBar-width">
 
-                <div class="navBar-left">
-                    <img src="/assets/images/logoPrimary.png">
-                </div>
+                    <div class="navBar-left">
+                        <img src="/assets/images/logoPrimary.png">
+                    </div>
 
-                <div class="navBar-right">
-                    <a href="/" class="navBar-link navActive">Home</a>
-                    <a href="/server" class="navBar-link">Server Status</a>
-                    <a href="/leaderboards" class="navBar-link">Leaderboards</a>
-                    <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
-                    
-                    <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
+                    <div class="navBar-right">
+                        <a href="/" class="navBar-link navActive">Home</a>
+                        <a href="/server" class="navBar-link">Server Status</a>
+                        <a href="/leaderboards" class="navBar-link">Leaderboards</a>
+                        <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
+                        
+                        <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
+                    </div>
+
                 </div>
 
             </div>
-
-        </div>
 
 
         <!-- NAVBAR END -->
@@ -67,127 +72,128 @@
         <!-- container -->
 
 
-        <div class="HomeContainer">
+            <div class="HomeContainer">
 
-            <div class="homeHeader">
-                <p class="homeTitle">Welcome to Tarkraft!</p>
-                <p class="homeSlogan">
-                    Escape on Tarkraft is a Mincraft modpack/server set inside a hardcore military shooter with built in rpg and mmo features. 
-                    Battle through various raids to loot, kill, and steal anything you find to bring back to your base. 
-                    But BEWARE, only risk whatever you are willing to lose.
-                </p>
+                <div class="homeHeader">
+                    <p class="homeTitle">Welcome to Tarkraft!</p>
+                    <p class="homeSlogan">
+                        Escape on Tarkraft is a Mincraft modpack/server set inside a hardcore military shooter with built in rpg and mmo features. 
+                        Battle through various raids to loot, kill, and steal anything you find to bring back to your base. 
+                        But BEWARE, only risk whatever you are willing to lose.
+                    </p>
 
-                <a href="https://www.curseforge.com/minecraft/modpacks/escape-from-minecraft" class="headingBtn">Get the Modpack</a>
-            </div>
-
-
-        </div>
-
-
-    </div> <!-- NAVBAR-HEADER-CONTAINER -->
-
-
-        <div class="newsContainer">
-
-            <div class="topHeading">
-
-                <p class="bigHeading">Videos!</p>
-    
-                <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
-                </svg>
-    
-                <p class="smallHeading">Here we have some great videos of gameplay as well as some awesome recreation trailers as-well! We hope you enjoy them.</p>
-    
-            </div>
-
-            <div class="newsSliders">
-
-                <div class="newsInfo">
-
-                    <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/TrD58tqs3fU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <div class="newsDetails">
-
-                        <div class="newsSpacing">
-                            <p class="newsName">Early Alpha Gameplay</p>
-                            <p class="smallNews">Here we have some really early alpha gameplay with us showing off the gun mod and scavs!</p>
-                        </div>
-
-                    </div>
-
-                </div>
-
-                <div class="newsInfo">
-
-                    <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/L-RGOQ-l1LY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-                    <div class="newsDetails">
-
-                        <div class="newsSpacing">
-
-                            <p class="newsName">Official Server Trailer</p>
-                            <p class="smallNews">Here is one of our trailers for our Official Escape from Tarkraft Server!</p>
-                        
-                        </div>
-                        
-                    </div>
-
-                </div>
-
-                <div class="newsInfo">
-
-                    <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/lXGakm_etN8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-                    <div class="newsDetails">
-
-                        <div class="newsSpacing">
-
-                            <p class="newsName">Open Beta Announcement Trailer</p>
-                            <p class="smallNews">Our Official Tarkraft Server will go live on February 26th so don't miss it!</p>
-                        
-                        </div>
-                        
-                    </div>
-
+                    <a href="https://www.curseforge.com/minecraft/modpacks/escape-from-minecraft" class="headingBtn">Get the Modpack</a>
                 </div>
 
             </div>
 
-        </div>
+
+        </div> <!-- NAVBAR-HEADER-CONTAINER -->
 
 
-        <!-- container -->
+        <div class="HomeBackgroundContainer">
+            <div class="newsContainer">
 
-        <div class="bookEvent">
-
-            <div class="topHeading">
-
-                <p class="bigHeading">Looking to keep up with the latest Tarkraft news?</p>
+                <div class="topHeading">
     
-                <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
-                </svg>
+                    <p class="bigHeading">Videos!</p>
+        
+                    <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
+                    </svg>
+        
+                    <p class="smallHeading">Here we have some great videos of gameplay as well as some awesome recreation trailers as-well! We hope you enjoy them.</p>
+        
+                </div>
     
-                <p class="smallHeading">We provide things like map updates and developer updates on our Official Discord server. If you do not have Discord feel free to join our forums and we post all news there as well.</p>
-                    
-                <a href="https://discord.gg/TspMTqt" class="headingBtn">Join our Discord</a>
+                <div class="newsSliders">
+    
+                    <div class="newsInfo">
+    
+                        <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/TrD58tqs3fU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <div class="newsDetails">
+    
+                            <div class="newsSpacing">
+                                <p class="newsName">Early Alpha Gameplay</p>
+                                <p class="smallNews">Here we have some really early alpha gameplay with us showing off the gun mod and scavs!</p>
+                            </div>
+    
+                        </div>
+    
+                    </div>
+    
+                    <div class="newsInfo">
+    
+                        <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/L-RGOQ-l1LY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+                        <div class="newsDetails">
+    
+                            <div class="newsSpacing">
+    
+                                <p class="newsName">Official Server Trailer</p>
+                                <p class="smallNews">Here is one of our trailers for our Official Escape from Tarkraft Server!</p>
+                            
+                            </div>
+                            
+                        </div>
+    
+                    </div>
+    
+                    <div class="newsInfo">
+    
+                        <iframe width="600" height="350" src="https://www.youtube-nocookie.com/embed/lXGakm_etN8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+                        <div class="newsDetails">
+    
+                            <div class="newsSpacing">
+    
+                                <p class="newsName">Open Beta Announcement Trailer</p>
+                                <p class="smallNews">Our Official Tarkraft Server will go live on February 26th so don't miss it!</p>
+                            
+                            </div>
+                            
+                        </div>
+    
+                    </div>
+    
+                </div>
     
             </div>
-
+    
+    
+            <!-- container -->
+    
+            <div class="bookEvent">
+    
+                <div class="topHeading">
+    
+                    <p class="bigHeading">Looking to keep up with the latest Tarkraft news?</p>
+        
+                    <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
+                    </svg>
+        
+                    <p class="smallHeading">We provide things like map updates and developer updates on our Official Discord server. If you do not have Discord feel free to join our forums and we post all news there as well.</p>
+                        
+                    <a href="https://discord.gg/TspMTqt" class="headingBtn">Join our Discord</a>
+        
+                </div>
+    
+            </div>
+    
+    
+            <!-- FOOTER -->
+    
+            <div class="JCFooter">
+                <img src="/assets/images/LogoGray.png" class="footerLogo">
+                <p class="footerTitle">Looking to get in touch?</p>
+                <p class="footerDesc">Contact us via the forums or for a more direct communication feel free to join our discord!</p>
+    
+                <p class="footerCopyright">JA Enterprises LLC &copy; 2021. All Rights Reserved</p>
+                <a href="https://joshuacote.net" class="joshuacote">Made by <img src="https://joshuacote.net/copyright/cote.png"></a>
+            </div>
+            <!-- FOOTER -->    
         </div>
-
-
-        <!-- FOOTER -->
-
-        <div class="JCFooter">
-            <img src="/assets/images/LogoGray.png" class="footerLogo">
-            <p class="footerTitle">Looking to get in touch?</p>
-            <p class="footerDesc">Contact us via the forums or for a more direct communication feel free to join our discord!</p>
-
-            <p class="footerCopyright">JA Enterprises LLC &copy; 2021. All Rights Reserved</p>
-            <a href="https://joshuacote.net" class="joshuacote">Made by <img src="https://joshuacote.net/copyright/cote.png"></a>
-        </div>
-        <!-- FOOTER -->
 
 
         <!-- SCRIPT -->
