--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -143,14 +143,14 @@ a {
 
 #myVideo {
     position: fixed;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
-  }
+    min-width: 100vw;
+    min-height: 100vh;
+    z-index: -100;
+    object-fit: fill;
+}
 
 .homeContainer-NavBar {
-    background: url(/public/assets/images/header-bg.png);
+    /* background: url(/public/assets/images/header-bg.png); */
     /*background: url(https://www.youtube-nocookie.com/embed/lXGakm_etN8);*/
     background-size: cover;
     background-position: top;
@@ -158,7 +158,7 @@ a {
 }
 
 .homeContainer-NavBar .navBar-bg {
-    background: inherit;
+    background: #111316;
 }
 
 .HomeContainer {
@@ -167,6 +167,11 @@ a {
     justify-content: center;
     text-align: center;
     min-height: 80vh;
+}
+
+.HomeBackgroundContainer {
+    padding-top: 10px;
+    background: #19181c;
 }
 
 .homeTitle {
