--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,7 +23,7 @@
 
 
         <video id="myVideo" muted autoplay loop playsinline>
-            <source src="/assets/videos/tanks.mp4" type="video/mp4">
+            <source src="/assets/videos/trailer2.mp4" type="video/mp4">
         </video>
 
         <!-- NAVBAR -->
