--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -36,6 +36,7 @@
                 <a href="/" class="navMob-link">Home</a>
                 <a href="/server" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
+                <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
@@ -56,6 +57,7 @@
                         <a href="/" class="navBar-link navActive">Home</a>
                         <a href="/server" class="navBar-link">Server Status</a>
                         <a href="/leaderboards" class="navBar-link">Leaderboards</a>
+                        <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                         <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                         
                         <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
