--- a/views/pages/leaderboards.ejs
+++ b/views/pages/leaderboards.ejs
@@ -32,6 +32,7 @@
                 <a href="/" class="navMob-link">Home</a>
                 <a href="/server" class="navMob-link">Server Status</a>
                 <a href="/leaderboards" class="navMob-link">Leaderboards</a>
+                <a href="https://store.tarkraft.com/" class="navMob-link">Store</a>
                 <a href="https://forums.tarkraft.com/" class="navMob-link">Join Now</a>
             </div>
           </div>
@@ -50,6 +51,7 @@
                     <a href="/" class="navBar-link">Home</a>
                     <a href="/server" class="navBar-link">Server Status</a>
                     <a href="/leaderboards" class="navBar-link navActive">Leaderboards</a>
+                    <a href="https://store.tarkraft.com/" class="navBar-link">Store</a>
                     <a href="https://forums.tarkraft.com/" class="navBar-btn">Join Now</a>
                     
                     <span class="mobHam" onclick="openMobileNav()">&#9776;</span>
@@ -68,13 +70,13 @@
 
         <div class="topHeading">
 
-            <p class="bigHeading">Top 10 Player Profile</p>
+            <p class="bigHeading">Player Leaderboards</p>
 
             <svg width="374" height="2" viewBox="0 0 374 2" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <ellipse cx="187" cy="1" rx="187" ry="1" fill="#B90303" fill-opacity="0.88"/>
             </svg>
 
-            <p class="smallHeading">Here is our current top 10 Players of the Official Server! </p>
+            <p class="smallHeading">Here are the current stats for all players of the Official Tarkraft Server! </p>
 
             <br>
 
